Fix login buttons' vertical alignment

--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -247,6 +247,7 @@ ul.topbar-dropdown {
 
           &.icon-link {
             padding: 0;
+            vertical-align: middle;
           }
         }
 
